[package]
name = "dioxus-headlessui"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { git = "https://github.com/DioxusLabs/dioxus.git", rev = "c3edf99b6367f6b21989ed9c453790be74a1ff76", features = ["web"] }
web-sys = {  version = "0.3", features = ["HtmlDialogElement"] }
tracing = "0.1"

[dev-dependencies]
wasm-bindgen-test = "0.3"
