[package]
name = "dioxus-headlessui"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { git = "https://github.com/DioxusLabs/dioxus.git", rev = "7d78e5e2500f9c34258045dd633954d72b7ee161", features = ["web"] }
web-sys = {  version = "0.3", features = ["HtmlDialogElement"] }
tracing = "0.1"

[dev-dependencies]
wasm-bindgen-test = "0.3"
