[package]
name = "dioxus-headlessui"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { git = "https://github.com/DioxusLabs/dioxus.git", rev = "902d6e2fd7b3192f2cf8b28438ab0df4bd590ddc", features = ["web"] }
web-sys = {  version = "0.3", features = ["HtmlDialogElement"] }
tracing = "0.1"

[dev-dependencies]
wasm-bindgen-test = "0.3"
